# TASKMCP

./: .env  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go
.cursor/commands/: architect-inquisitor.md
.cursor/rules/: plan-bundle.mdc
adr/: 0001-mcp-vault-bridge-stdio-postgres.md
docs/: architecture-five-layers.md  writer-contract.md
internal/app/: app.go
internal/features/epics/: dto.go  repo.go  service.go  tools.go
internal/features/githubissues/: dto.go  github_app.go  payload.go  payload_test.go  repo.go  service.go  (+1 more)
internal/mcpserver/: register.go
internal/mcputil/: mcputil.go
migrations/: 000001_base_schema.down.sql  000001_base_schema.up.sql  000002_epics.down.sql  000002_epics.up.sql  000003_github_links.down.sql  000003_github_links.up.sql  000004_projects.down.sql  000004_projects.up.sql  000005_tasks_created_at.down.sql  000005_tasks_created_at.up.sql  000006_pgvector_kb.down.sql  000006_pgvector_kb.up.sql  000007_memory_bank.down.sql  000007_memory_bank.up.sql  000008_writer_constraints.down.sql  000008_writer_constraints.up.sql  000009_kb_hybrid_fts.down.sql  000009_kb_hybrid_fts.up.sql  000010_security_rls.down.sql  000010_security_rls.up.sql  0001_epics.sql  0002_github_links.sql  0003_projects.sql  0004_tasks_created_at.sql  0005_pgvector_kb.sql
orchestrator/: Dockerfile  README.md  pyproject.toml
orchestrator/vault_orchestrator/: __init__.py  jobs.py  main.py  models.py  settings.py  vault_apply.py  worker.py
plan/: planbundle_rn_auth.json
plans/: planbundle_rn_chat_gemini.json
scripts/: seed_rn_auth.sql
(+20 files in other folders)
