[project]
name = "vault-orchestrator"
version = "0.1.0"
description = "FastAPI webhook + arq worker applying PlanBundle to Vault (Postgres) via Redis broker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arq>=0.26.0",
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
vault-orchestrator-api = "vault_orchestrator.main:main"
vault-orchestrator-worker = "vault_orchestrator.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vault_orchestrator"]
